--- a/views/stockPage.ejs
+++ b/views/stockPage.ejs
@@ -25,6 +25,9 @@
     </nav>
 </header>
 <div class="container">
+    <div class="alert-text" id="portfolioAlert">
+        <p id="message"></p>
+    </div>
     <div class="card mb-3">
         <div id="stockInformation" class="card-body">
             <h5 id="stockTitle" class="card-title"><%= name %> (<%= ticker %>)</h5>
