--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -25,6 +25,9 @@
     </nav>
 </header>
 <div class="container">
+    <div class="alert-text" id="portfolioAlert">
+        <p id="message"></p>
+    </div>
     <div class="card">
         <div id="stockInformation" class="card-body portfolioheader">
             <h1 id="stockTitle" class="card-title">Portfolio</h1>
@@ -61,7 +64,7 @@
                                     <p>Funds to Add</p>
                                 </div>
                                 <div class="col-4">
-                                    <input autocomplete="off" type="text" class="form-control" placeholder="$300" id="addFundsField">
+                                    <input autocomplete="off" type="number" min="0.01" step="0.01" class="form-control" placeholder="$300" id="addFundsField">
                                 </div>
                             </div>
                         </form>
