--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -78,6 +78,41 @@
         </div>
     </div>
 
+    <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#delete">
+        Delete Account
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Add Funds</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="col-8">
+                                <p>Delete Account</p>
+                            </div>
+                            <div>
+                                <h1>Click yes to delete account</h1>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="deleteAccount">Yes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
     <% stocks.forEach(function (stock) { %>
         <div class="card" id="allDiv<%= stock.stockName %>">
             <div class="card-body">
