--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -87,7 +87,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Add Funds</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Delete Account</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -96,10 +96,10 @@
                     <form>
                         <div class="form-row">
                             <div class="col-8">
-                                <p>Delete Account</p>
+                                <p>You are about to delete your account!</p>
                             </div>
                             <div>
-                                <h1>Click yes to delete account</h1>
+                                <h1>Click yes to delete account!</h1>
                             </div>
                         </div>
                     </form>
