--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
         <div class="row menuComponents">
             <div class="col-2 logo"><a class="headerLink" href="/"><img src="stock-market-simulator-01.png" width="100%"/></a></div>
-            <div class="col-4 searchBar"><input class="form-control" autocomplete="off" type="text" placeholder="Search" id="searchBox"></div>
+            <div class="col-4 searchBar"><input class="form-control" autocomplete="off" type="text" placeholder="Search for Stock Symbol" id="searchBox"></div>
             <div class="col-2 my-portfolio"><a class="headerLink" href="/myPortfolio">Portfolio</a></div>
             <div class="col-3 sign-in"><a class="headerLink" href="/<%= accountLink %>" id="<%= accountID %>"><%= accountStatus %></a></div>
         </div>
@@ -29,8 +29,7 @@
     <h1 id="mainTitle">Practice your Stock Market<br>
         strategies with a
         Virtual Wallet!&nbsp; &nbsp;&nbsp;</h1>
-    <p><strong>Put your day-trading or long-term trade strategies to the test and see how they perform without any risk<br>
-            with our virtual currency!&nbsp;<br>
+    <p><strong>Put your day-trading or long-term trade strategies to the test and see how they perform without any risk with our virtual currency!&nbsp;<br>
         </strong>Simply create an account and buy and sells stock. <br>
         Check your portfolio to see the performance of your stocks over time along with your account's balance change. <br>
         Your account will have a starting account balance, but you can add more funds whenever you want.</p>
