--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
         <div class="row menuComponents">
             <div class="col-2 logo"><a class="headerLink" href="/"><img src="stock-market-simulator-01.png" width="100%"/></a></div>
-            <div class="col-4"><input class="form-control" autocomplete="off" type="text" placeholder="Search" id="searchBox"></div>
+            <div class="col-4"><input class="form-control" autocomplete="off" type="text" placeholder="Search for Stock Symbol" id="searchBox"></div>
             <div class="col-2 my-portfolio"><a class="headerLink" href="/myPortfolio">Portfolio</a></div>
             <div class="col-3 sign-in"><a class="headerLink" href="/<%= accountLink %>">Sign in</a></div>
         </div>
