--- a/views/stockPage.ejs
+++ b/views/stockPage.ejs
@@ -12,8 +12,6 @@
     <link rel="stylesheet" type="text/css" href="../styles.css">
     <title><%= ticker %></title>
 </head>
-
-<body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
         <div class="row menuComponents">
@@ -48,6 +46,8 @@
                 <tr>
                     <td>Previous Close Price</td>
                     <td id="previousClosePrice"><%= pc %></td>
+                    <td>Change in Stock Value</td>
+                    <td id="changeOverTime"><%= changeOverTime %>%</td>
                 </tr>
                 </tbody>
             </table>
@@ -132,9 +132,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <!-- unique Bootstrap 4 JavaScript scripts -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-<script src="buyStocks.js"></script>
 <script src="header.js"></script>
-<% if (script != '') { %>
+<% if (accountID === 'signOut') { %>
+    <script src="modalBuy.js"></script>
+<% } %>
+<% if (accountID === 'signIn') { %>
+    <script src="buyStocks.js"></script>
+<% } %>
+<% if (script !== '') { %>
     <script src="modalEnter.js"></script>
 <% } %>
 </body>
